<resources>
    <string name="app_name">basicuiex1</string>
    <string name="what_a_spicy_meatbolla">Meatballs</string>
    <string name="is_this_the_face_of_mercy">Chicken</string>
    <string name="kiss_the_fishy">Fish</string>
    <string name="amuricah_fac_yeah">Steak</string>
    <string name="I_AM_A_VEGETARIAN">Carrots</string>
    <string name="the_moment_of_truth">Select</string>
</resources>
